--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -11,7 +11,7 @@
 
         <div class="row" style="margin-bottom: 5px;">
                 <nav class="navbar navbar-expand-sm  navbar-dark" style="background-color:black;">
-                    <a class="navbar-brand" href="#" style="color:yellow">Etusivu</a>
+                    <a class="navbar-brand" href="https://anttiannala.github.io/Project/Etusivu/etusivu.html" style="color:yellow">Etusivu</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                       <span class="navbar-toggler-icon"></span>
                     </button>
