--- a/Etusivu/etusivu.html
+++ b/Etusivu/etusivu.html
@@ -9,7 +9,7 @@
     </head>
 <body>
 
-    <div class="container">
+    <div class="container-fluid">
 
         <div class="row" style="margin-bottom: 5px;">
                 <nav class="navbar navbar-expand-sm  navbar-dark" style="background-color:black;">
