--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 <body>
+    <div class="container-fluid">
     <div class="container">
 
         <div class="row" style="margin-bottom: 5px;">
@@ -24,14 +25,14 @@
                           <a class="nav-link" href="#">Varaa aika</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Tietoa meistä</a>
+                          <a class="nav-link" href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
                         </li>    
                       </ul>
                     </div>  
                   </nav>
             </div>
     </div>            
-
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
