--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -12,7 +12,7 @@
 
         <div class="row" style="margin-bottom: 5px;">
                 <nav class="navbar navbar-expand-sm  navbar-dark" style="background-color:black;">
-                    <a class="navbar-brand" href="https://anttiannala.github.io/Project/Etusivu/etusivu.html" style="color:yellow">Etusivu</a>
+                    <a class="navbar-brand" href="https://anttiannala.github.io/Project/index.html" style="color:yellow">Etusivu</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                       <span class="navbar-toggler-icon"></span>
                     </button>
@@ -33,6 +33,7 @@
             </div>
     </div>            
     </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
