--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Etusivu</title>
-        <link href="css/" rel="stylesheet">
+        <link href="/css/css.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     </head>
 <body>
@@ -38,7 +38,7 @@
     <div class="containet-fluid" style="background-color:black;">
       <center>
       <h3 style="color:yellow;">Autokorjaamo</h3><br>
-      <a href="#" style="color:darkgray">Etusivu</a> <a href="#" style="color:darkgray">Link</a> <a href="#" style="color:darkgray">Varaa aika</a> <a href="#" style="color:darkgray">Tietoa meistä</a><br>
+      <a href="index.html">Etusivu</a> <a href="#">Link</a> <a href="#">Varaa aika</a> <a href="#">Tietoa meistä</a><br>
     </center>
     </div>
 
