--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Etusivu</title>
-        <link href="/css/css.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+        <link href="/css/css.css" rel="stylesheet">
+
+        <style>
+    a:link{
+        color:gray;
+    }
+    a:hover{
+        color:yellow;
+    }
+    a:visited{
+        color:orange
+    }
+
+
+        </style>
     </head>
 <body>
 
