--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -38,11 +38,11 @@
     </div>
     <div class="col-sm-8 content">
 	<h2>Autokorjaamo</h2>
-			<div class="teaser"> Autokorjaamo on suomen monipuolisin autokorjaamo-, varaosa-, ja tarvikeketju.</div>
-		<p>Autokorjaamo käynnisti toimintansa Hämeenlinnassa loppuvuodesta 2015. Autokorjaamo tarjoaa korkealaatuisia tuotteita ja palveluja ja pyrkii aina ensisijaisesti huomioimaan asiakkaan tarpeet – haluamme tehdä AutoElämästä helpomman.</p>
-<h2>Autokorjaamon Myymälä</h2>
+			<div class="teaser"> Autokorjaamo. on suomen monipuolisin autokorjaamo-, varaosa-, ja tarvikeliike.</div>
+		<p>Autokorjaamo. käynnisti toimintansa Hämeenlinnassa loppuvuodesta 2015. Autokorjaamo tarjoaa korkealaatuisia tuotteita ja palveluja ja pyrkii aina ensisijaisesti huomioimaan asiakkaan tarpeet – haluamme tehdä AutoElämästä helpomman.</p>
+<h2>Autokorjaamo. Myymälä</h2>
 <p>Myymälän laajasta varaosa- ja tarvikevalikoimasta löytyy niin autoiluun kuin autoilijan vapaa-aikaan tarvittavat tuotteet. Tarjoamme laajan ja helposti saatavilla olevan valikoiman edullisia ja innovatiivisia ratkaisuja sekä tuotteita kuluttajille ja yrityksille. Valikoimasta löytyy varaosat ja tarvikkeet yli 5000 eri automalliin.</p>
-<h2>Autokorjaamon autohuolto</h2>
+<h2>Autokorjaamo. autohuolto</h2>
 <p>Huollot ja korjaukset suorittaa aina ammattitaitoinen mekaanikko ja myönnämme varaosille vähintään kolmen vuoden takuun. Huollamme ja korjaamme kaikkia automerkkejä ja malleja auton iästä riippumatta.</p>
 <p>Autokorjaamon matka on vasta aluillaan ja tarkoituksenamme on laajentaa uusille paikkakunnille. Tavoitteenamme tarjota yhä useammalle helpompaa AutoElämää.</p>
 </div>
