--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -33,11 +33,11 @@
                   </nav>
             </div>
     </div>     
-    <div class="col-sm-12 page-hero">
+    <div class="col-sm-12 page-hero" >
 		<img width="1170" height="780" src="images/Autokorjaamo.jpg" class="attachment-hero size-hero wp-post-image" alt="" loading="lazy" />	
     </div>
-    <div class="col-sm-8 content">
-	<h2>Autokorjaamo</h2>
+    <div class="col-sm-8 content" >
+	<h2>Autokorjaamo.</h2>
 			<div class="teaser"> Autokorjaamo. on suomen monipuolisin autokorjaamo-, varaosa-, ja tarvikeliike.</div>
 		<p>Autokorjaamo. käynnisti toimintansa Hämeenlinnassa loppuvuodesta 2015. Autokorjaamo tarjoaa korkealaatuisia tuotteita ja palveluja ja pyrkii aina ensisijaisesti huomioimaan asiakkaan tarpeet – haluamme tehdä AutoElämästä helpomman.</p>
 <h2>Autokorjaamo. Myymälä</h2>
