--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -23,7 +23,7 @@
                           <a class="nav-link" href="#">Link</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Varaa aika</a>
+                          <a class="nav-link" href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa aika</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
