--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="/images/teetarjous.jpg" class="d-block w-100" alt="https://commons.wikimedia.org/wiki/File:Motrio_mechanic_in_its_workshop.jpg">
+                    <img src="images/teetarjous.jpg" class="d-block w-100" alt="https://commons.wikimedia.org/wiki/File:Motrio_mechanic_in_its_workshop.jpg">
                   </div>
                   <div class="carousel-item">
                     <img src="..." class="d-block w-100" alt="...">
