--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
                     </div>  
                   </nav>
             </div>
-
+        <div class="container">
             <!--Carousel-->
-            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div style="background-color: gray;" id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/teetarjous.jpg" class="d-block w-100" alt="https://commons.wikimedia.org/wiki/File:Motrio_mechanic_in_its_workshop.jpg">
+                    <img src="images/teetarjous.jpg" style="width: 300px; height: 400px;" class="d-block w-100" alt="https://commons.wikimedia.org/wiki/File:Motrio_mechanic_in_its_workshop.jpg">
                   </div>
                   <div class="carousel-item">
                     <img src="..." class="d-block w-100" alt="...">
@@ -68,6 +68,7 @@
                   <span class="visually-hidden">Next</span>
                 </a>
               </div>
+         </div>
 
               <div class="container-sm">
                 <h1>Aukioloajat</h1>
