--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tietoa-meistä/esittely</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <style>
+        a:link{
+            color:gray;
+        }
+        a:hover{
+            color:yellow;
+        }
+        a:visited{
+            color:orange
+        }
+            </style>
     
 </head>
 <body>
@@ -34,6 +45,7 @@
             </div>
     </div>     
     <div class="col-sm-12 page-hero" >
+        
 		<img width="1170" height="780" src="images/Autokorjaamo.jpg" class="attachment-hero size-hero wp-post-image" alt="" loading="lazy" />	
     </div>
     <div class="col-sm-8 content" >
