--- a/Varaa-aika/Varaapalvelu.html
+++ b/Varaa-aika/Varaapalvelu.html
@@ -50,6 +50,14 @@
                <input type="checkbox" id="Muu korjaus, tarkenna" name="Muu korjaus, tarkenna" value="Muu korjaus, tarkenna">
                <label for="Muu korjaus, tarkenna">Muu korjaus, tarkenna</label><br>
                <input type="text" id="tarkennus" name="tarkennus" value="tarkenna ongelmasi" style="width: 300px;height: 150px; font-weight: lighter; font-style: italic;">
+              </form>
+              <br>
+              <br>
+              <h3>Mikä päivä sinulle sopisi?</h3>
+              <form action="/action_page.php">
+                <label for="päivämäärä">Valitse sopiva päivämäärä</label>
+                <input type="date" id="huolto" name="päivämäärä">
+              </form>
               
            </form> 
 
