--- a/Varaa-aika/Varaapalvelu.html
+++ b/Varaa-aika/Varaapalvelu.html
@@ -13,7 +13,7 @@
 
         <div class="row" style="margin-bottom: 5px;">
                 <nav class="navbar navbar-expand-sm  navbar-dark" style="background-color:black;">
-                    <a class="navbar-brand" href="index.html" style="color:yellow">Etusivu</a>
+                    <a class="navbar-brand" href="https://anttiannala.github.io/Project/" style="color:yellow">Etusivu</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                       <span class="navbar-toggler-icon"></span>
                     </button>
@@ -23,7 +23,7 @@
                           <a class="nav-link" href="#">Link</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="varaa aika.html">Varaa aika</a>
+                          <a class="nav-link" href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa palvelu</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
@@ -61,8 +61,17 @@
               
            </form> 
 
+            <!--Footer-->
+           <div class="container-fluid" style="background-color:black;">
+           <center>
+           <h3 style="color:yellow;">Autokorjaamo.</h3><br>
+           <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="#">Link</a> <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa aika</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a><br>
+           </center>
+          </div>
+  
 
           </div>
+
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
