--- a/Varaa-aika/Varaapalvelu.html
+++ b/Varaa-aika/Varaapalvelu.html
@@ -35,6 +35,7 @@
    
         </div>   
         <div class="container-md">
+          <center>
            <h2>Minkä laista huoltoa tarvitset?</h2>
             <form>
                <input type="checkbox" id="määräaikaishuolto" name="Määräaikaishuolto" value="Määräaikaishuolto">
@@ -60,8 +61,9 @@
               </form>
               
            </form> 
-
-            <!--Footer-->
+          </center>
+            
+          <!--Footer-->
            <div class="container-fluid" style="background-color:black;">
            <center>
            <h3 style="color:yellow;">Autokorjaamo.</h3><br>
