--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
             <div style="background-color: gray;" id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
+                    <img src="images/teetarjous.jpg" style="float:middle; height: 400px;" class="d-block w-50" alt="https://commons.wikimedia.org/wiki/File:Motrio_mechanic_in_its_workshop.jpg">
+                  </div>
+                  <div class="carousel-item">
                     <img src="images/teetarjous.jpg" style="width: 300px; height: 400px;" class="d-block w-100" alt="https://commons.wikimedia.org/wiki/File:Motrio_mechanic_in_its_workshop.jpg">
                   </div>
                   <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
-                  </div>
-                  <div class="carousel-item">
-                    <img src="..." class="d-block w-100" alt="...">
+                    <img src="images/teetarjous.jpg" style="width: 300px; height: 400px;" class="d-block w-100" alt="https://commons.wikimedia.org/wiki/File:Motrio_mechanic_in_its_workshop.jpg">
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
@@ -78,7 +78,7 @@
     
     <!--Footer-->
     <div class="container-fluid" style="background-color:black;">
-      <center>
+    <center>
       <h3 style="color:yellow;">Autokorjaamo</h3><br>
       <a href="index.html">Etusivu</a> <a href="#">Link</a> <a href="#">Varaa aika</a> <a href="#">Tietoa meistä</a><br>
     </center>
