--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -62,7 +62,7 @@
      <!--Footer-->
      <div class="container-fluid" style="background-color:black;">
         <center>
-        <h3 style="color:yellow;">Autokorjaamo</h3><br>
+        <h3 style="color:yellow;">Autokorjaamo.</h3><br>
         <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="#">Link</a> <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa aika</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a><br>
       </center>
       </div>
