--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     a:visited{
         color:orange
     }
+    th {
+        padding:5px;
+    }
         </style>
     </head>
 <body>
@@ -26,7 +29,7 @@
         <!--Navbar-->
         <div class="row" style="margin-bottom: 5px;">
                 <nav class="navbar navbar-expand-sm  navbar-dark" style="background-color:black;">
-                    <a class="navbar-brand" href="#" style="color:yellow">Etusivu</a>
+                    <a class="navbar-brand" href="https://anttiannala.github.io/Project/" style="color:yellow">Etusivu</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                       <span class="navbar-toggler-icon"></span>
                     </button>
@@ -36,10 +39,10 @@
                           <a class="nav-link" href="#">Link</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Varaa aika</a>
+                          <a class="nav-link" href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa aika</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Tietoa meistä</a>
+                          <a class="nav-link" href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
                         </li>    
                       </ul>
                     </div>  
@@ -50,7 +53,7 @@
             <div style="background-color: gray;" id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/teetarjous.jpg" style="float:middle; height: 400px;" class="d-block w-50" alt="https://commons.wikimedia.org/wiki/File:Motrio_mechanic_in_its_workshop.jpg">
+                    <img src="images/teetarjous.jpg" style="height: 400px;" class="d-block w-50" alt="https://commons.wikimedia.org/wiki/File:Motrio_mechanic_in_its_workshop.jpg">
                   </div>
                   <div class="carousel-item">
                     <img src="images/teetarjous.jpg" style="width: 300px; height: 400px;" class="d-block w-100" alt="https://commons.wikimedia.org/wiki/File:Motrio_mechanic_in_its_workshop.jpg">
@@ -72,6 +75,17 @@
 
               <div class="container-sm">
                 <h1>Aukioloajat</h1>
+                <div class="card" style="width: 500px;font-size: large;">
+                    <div class="card-body">
+
+                      <table>
+                          <tr><th>Ma-Pe</th><th>8-16</th></tr>
+                          <tr><th>La</th><th>9-15</th></tr>
+                          <tr><th>Su</th><th>Suljettu</th></tr>
+                      </table>
+
+                    </div>
+                  </div>
               </div>
 
     </div>     
