--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -6,14 +6,13 @@
     <title>Tietoa-meistä/esittely</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <style>
-        a, a class{
+          a{
             color:gray;
         }
-        a:hover, a class{
+        a:hover{
             color:yellow;
         }
     </style>
-    
 </head>
 <body>
   
