--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                 </a>
               </div>
          </div>
-
-              <div class="container-sm">
+            <!--Aukioloajat-->
+              <div class="container">
                 <h1>Aukioloajat</h1>
                 <div class="card" style="width: 500px;font-size: large;">
                     <div class="card-body">
@@ -83,17 +83,36 @@
                           <tr><th>La</th><th>9-15</th></tr>
                           <tr><th>Su</th><th>Suljettu</th></tr>
                       </table>
-
                     </div>
                   </div>
+              </div> <br>
+
+              <!--Columns-->
+              <div class="container">
+                <div class="row">
+                  <div class="col-sm-4" style="background-color:#aaa;">
+                    <h3>Mercedes esitteli ensimmäisen pienen sähköautonsa - hinta jää alle 50 000 euron?</h3>
+                    <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
+                  </div>
+                  <div class="col-sm-4" style="background-color:#bbb;">
+                    <h3>Tällaisen auton suomalainen haluaa: Hinta alle 20000 euroa - Mersu ja Volvo suosituimmat!</h3>
+                    <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
+                  </div>
+                  <div class="col-sm-4" style="background-color:#ccc;">
+                    <h3>Tältä näyttää täysin uusi Lada Niva: Ensimmäinen kuva paljastaa hurjan muutoksen</h3>
+                    <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
+                  </div>
+                </div>
               </div>
+
+
 
     </div>     
     
     <!--Footer-->
     <div class="container-fluid" style="background-color:black;">
     <center>
-      <h3 style="color:yellow;">Autokorjaamo</h3><br>
+      <h3 style="color:yellow;">Autokorjaamo.</h3><br>
       <a href="index.html">Etusivu</a> <a href="#">Link</a> <a href="#">Varaa aika</a> <a href="#">Tietoa meistä</a><br>
     </center>
     </div>
