--- a/index.html
+++ b/index.html
@@ -94,12 +94,29 @@
                     <h3>Mercedes esitteli ensimmäisen pienen sähköautonsa - hinta jää alle 50 000 euron?</h3>
                     <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
                   </div>
-                  <div class="col-sm-4" style="background-color:#bbb;">
+                  <div class="col-sm-4" style="background-color:#ccc;">
                     <h3>Tällaisen auton suomalainen haluaa: Hinta alle 20000 euroa - Mersu ja Volvo suosituimmat!</h3>
                     <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
                   </div>
-                  <div class="col-sm-4" style="background-color:#ccc;">
+                  <div class="col-sm-4" style="background-color:#aaa;">
                     <h3>Tältä näyttää täysin uusi Lada Niva: Ensimmäinen kuva paljastaa hurjan muutoksen</h3>
+                    <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
+                  </div>
+                </div>
+              </div>
+
+              <div class="container">
+                <div class="row">
+                  <div class="col-sm-4" style="background-color:#ccc;">
+                    <h3>Jopa karjan lannasta polttoainetta – Öljyn korvaajaksi ehdolla myös kasvatettu levä</h3>
+                    <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
+                  </div>
+                  <div class="col-sm-4" style="background-color:#aaa;">
+                    <h3>Punainen vai musta ensin? Näin kytket käynnistyskaapelit oikein</h3>
+                    <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
+                  </div>
+                  <div class="col-sm-4" style="background-color:#ccc;">
+                    <h3>Romutuspalkkion porsaanreikä tukitaan – palkkio vain yhdestä autosta</h3>
                     <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
                   </div>
                 </div>
