--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <div class="container-fluid" style="background-color:black;">
     <center>
       <h3 style="color:yellow;">Autokorjaamo.</h3><br>
-      <a href="index.html">Etusivu</a> <a href="#">Link</a> <a href="#">Varaa aika</a> <a href="#">Tietoa meistä</a><br>
+      <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="#">Link</a> <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa aika</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a><br>
     </center>
     </div>
 
