--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Etusivu</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-        <link href="/css/css.css" rel="stylesheet">
-
+        <link href="/css/css.css" rel="stylesheet" type="text/css" media="screen">
         <style>
     a:link{
         color:gray;
@@ -18,6 +17,7 @@
         color:orange
     }
     th {
+        color:yellow;
         padding:5px;
     }
         </style>
@@ -71,13 +71,12 @@
                   <span class="visually-hidden">Next</span>
                 </a>
               </div>
-         </div>
+         </div><br>
             <!--Aukioloajat-->
-              <div class="container">
-                <h1>Aukioloajat</h1>
-                <div class="card" style="width: 500px;font-size: large;">
+              <div class="container" >
+                <div class="card" style="width: 500px;font-size: large;background-color: black;">
                     <div class="card-body">
-
+                        <h1 style="color:yellow;">Aukioloajat</h1>
                       <table>
                           <tr><th>Ma-Pe</th><th>8-16</th></tr>
                           <tr><th>La</th><th>9-15</th></tr>
