--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -42,7 +42,7 @@
     </div>     
     <div class="col-sm-12 page-hero" >
         
-        <img width="1170" height="780" src="images/Autokorjaamo.jpg" class="attachment-hero size-hero wp-post-image" alt="" loading="lazy" />	
+        <img width="1170" height="780" src="images/Autokorjaamo.jpg" class="img-fluid" alt="" loading="lazy" />	
        
     </div>
     <div class="col-sm-8 content" >
