--- a/index.html
+++ b/index.html
@@ -50,17 +50,21 @@
             </div>
         <div class="container">
             <!--Carousel-->
-            <div style="background-color: gray;" id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div style="  background-image: linear-gradient(black, grey);" id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
+
                   <div class="carousel-item active">
-                    <img src="images/teetarjous.jpg" style="height: 400px;" class="d-block w-50" alt="https://commons.wikimedia.org/wiki/File:Motrio_mechanic_in_its_workshop.jpg">
+                    <img src="images/teetarjous.jpg" style="height: 400px;" class="rounded mx-auto d-block" alt="https://commons.wikimedia.org/wiki/File:Motrio_mechanic_in_its_workshop.jpg">
                   </div>
+
                   <div class="carousel-item">
-                    <img src="images/teetarjous.jpg" style="width: 300px; height: 400px;" class="d-block w-100" alt="https://commons.wikimedia.org/wiki/File:Motrio_mechanic_in_its_workshop.jpg">
+                    <img src="images/car.jpg" style="width: 300px; height: 400px;" class="d-block w-100" alt="https://pixabay.com/fi/photos/auto-mekaanikko-mekaanikko-ty%C3%B6paja-2834414/">
                   </div>
+
                   <div class="carousel-item">
-                    <img src="images/teetarjous.jpg" style="width: 300px; height: 400px;" class="d-block w-100" alt="https://commons.wikimedia.org/wiki/File:Motrio_mechanic_in_its_workshop.jpg">
+                    <img src="images/rengas.jpg" style="width: 300px; height: 400px;" class="d-block w-100" alt="https://pixy.org/5881422/">
                   </div>
+
                 </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -119,7 +123,7 @@
                     <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
                   </div>
                 </div>
-              </div>
+              </div><br>
 
 
 
