--- a/Varaa-aika/Varaapalvelu.html
+++ b/Varaa-aika/Varaapalvelu.html
@@ -36,7 +36,7 @@
         </div>   
         <div class="container-md">
           <center>
-           <h2>Minkä laista huoltoa tarvitset?</h2>
+           <h2><strong>Minkä laista huoltoa tarvitset?</strong></h2>
             <form>
                <input type="checkbox" id="määräaikaishuolto" name="Määräaikaishuolto" value="Määräaikaishuolto">
                <label for="Määräaikaishuolto">Määräaikaishuolto</label>
@@ -58,7 +58,7 @@
               </div>
               <br>
               <br>
-              <h3>Mikä päivä sinulle sopisi?</h3>
+              <h3><strong>Mikä päivä sinulle sopisi?</strong></h3>
               <form action="/action_page.php">
                 <label for="päivämäärä">Valitse sopiva päivämäärä</label>
                 <input type="date" id="huolto" name="päivämäärä">
@@ -66,8 +66,8 @@
               
            </form> 
           </center>
-          
-          <label for="exampleDataList" class="form-label">Datalist example</label>
+          <h5><strong>Auton tiedot</strong></h5>
+          <label for="exampleDataList" class="form-label">Auton tiedot</label>
             <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Valitse merkki">
             <datalist id="datalistOptions">
              <option value="BMW">
@@ -89,7 +89,7 @@
               <label for="floatingTextarea">Auton malli</label>
             </div>
             <br>
-            <h5>Paljonko autolla on ajettu?</h5>
+            <h5><strong>Paljonko autolla on ajettu?</strong></h5>
             <input type="text" id="Ajomäärä" name="Ajomäärä" value="Paljonko autola on ajettu" style="width: 250px;height: 25px; font-weight: lighter; font-style: italic;">
             <br>
             <h5>Kirjoita Tiedot</h5>
