--- a/Varaa-aika/Varaapalvelu.html
+++ b/Varaa-aika/Varaapalvelu.html
@@ -88,6 +88,10 @@
               <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
               <label for="floatingTextarea">Auton malli</label>
             </div>
+            <div class="form-floating">
+              <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+              <label for="floatingTextarea">Auton rekisteritunnus</label>
+            </div>
             <br>
             <h5><strong>Paljonko autolla on ajettu?</strong></h5>
             <input type="text" id="Ajomäärä" name="Ajomäärä" value="Paljonko autola on ajettu" style="width: 250px;height: 25px; font-weight: lighter; font-style: italic;">
@@ -98,20 +102,28 @@
              <label for="floatingInputValue">Kirjoita sähköposti osoitteesi</label>
             </div>
               <br>
+
               <div class="form-floating">
                 <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
                 <label for="floatingTextarea"> Kirjoita Etu- ja sukunimesi</label>
               </div>
-           
-           <div class="container-fluid" style="background-color:black;">
-           <center>
-           <h3 style="color:yellow;">Autokorjaamo.</h3><br>
-           <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="#">Link</a> <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa aika</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a><br>
-          </center>
-           </div>
-           
+              <br>
 
-          </div>
+              <div class="form-floating">
+                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+                <label for="floatingTextarea">Puhelinnumero</label>
+              </div>
+            <div class="d-grid gap-2">
+              <button class="btn btn-primary" type="button" style="background-color: yellow; color: #000; font-weight: bolder;">Varaa Huoltoaika</button>
+            </div>
+            <br>
+          <!--Footer-->
+           <div class="container-fluid" style="background-color:black;">
+                <center>
+                <h3 style="color:yellow;">Autokorjaamo.</h3><br>
+                 <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="#">Link</a> <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa aika</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a><br>
+                </center>
+           </div>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
