--- a/index.html
+++ b/index.html
@@ -20,11 +20,35 @@
         color:yellow;
         padding:5px;
     }
+    .text-block1 {
+        position:absolute;
+        bottom: 20px;
+        right: 450px;
+        background-color: black;
+        color: white;
+        padding-left: 40px;
+        padding-right: 40px;
+        padding-top:15px;
+        padding-bottom:15px;
+    }
+    .text-block2 {
+        position:absolute;
+        bottom: 20px;
+        right: 700px;
+        background-color: black;
+        color: white;
+        padding-left: 40px;
+        padding-right: 80px;
+        padding-top:15px;
+        padding-bottom:15px;
+    }
+
+
         </style>
     </head>
 <body>
 
-    
+
     <div class="container-fluid">
         <!--Navbar-->
         <div class="row" style="margin-bottom: 5px;">
@@ -55,10 +79,18 @@
 
                   <div class="carousel-item active">
                     <img src="images/teetarjous.jpg" style="height: 400px;" class="rounded mx-auto d-block" alt="https://commons.wikimedia.org/wiki/File:Motrio_mechanic_in_its_workshop.jpg">
+                      <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html"><div class="text-block1">
+                        <h4 style="color:yellow;">Varaa aika</h4>
+                        <p>Varaa sinulle sopiva aika klikkaamalla tästä</p>
+                      </div></a>
                   </div>
 
                   <div class="carousel-item">
                     <img src="images/car.jpg" style="width: 300px; height: 400px;" class="d-block w-100" alt="https://pixabay.com/fi/photos/auto-mekaanikko-mekaanikko-ty%C3%B6paja-2834414/">
+                    <a href="https://anttiannala.github.io/Project/TietoaMeista.html"><div class="text-block2">
+                      <h3 style="color:yellow;">Autokorjaamo.</h3>
+                      <p>Lue lisää yrityksestämme tältä sivulta</p>
+                    </div></a>
                   </div>
 
                   <div class="carousel-item">
@@ -92,6 +124,7 @@
 
               <!--Columns-->
               <div class="container">
+                <h1>Uutisia</h1>
                 <div class="row">
                   <div class="col-sm-4" style="background-color:#aaa;">
                     <h3>Mercedes esitteli ensimmäisen pienen sähköautonsa - hinta jää alle 50 000 euron?</h3>
@@ -105,7 +138,7 @@
                     <h3>Tältä näyttää täysin uusi Lada Niva: Ensimmäinen kuva paljastaa hurjan muutoksen</h3>
                     <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
                   </div>
-                </div>
+                  </div>
               </div>
 
               <div class="container">
