--- a/index.html
+++ b/index.html
@@ -167,6 +167,13 @@
     <center>
       <h3 style="color:yellow;">Autokorjaamo.</h3><br>
       <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="#">Link</a> <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa aika</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a><br>
+    <br>
+    <h3 style="color: yellow;">Yhteystiedot</h3>
+    <addres style="color: grey;">
+      autokorjaamo@autokorjaamo.com<br>
+      045 123 4567<br>
+      Vankanlähde 9, 13100 Hämeenlinna<br><br><br>
+    </addres>
     </center>
     </div>
 
