--- a/index.html
+++ b/index.html
@@ -72,8 +72,12 @@
                     </div>  
                   </nav>
             </div>
-        <div class="container">
+
+<div class="container-fluid" style="background-color:grey;padding:0;" >    
+  <div class="container" style="background-color:white;">
+        <div class="container" >
             <!--Carousel-->
+
             <div style="  background-image: linear-gradient(black, grey);" id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
 
@@ -109,7 +113,7 @@
               </div>
          </div><br>
             <!--Aukioloajat-->
-              <div class="container" >
+              <div class="container" style="background-color: white;">
                 <div class="card" style="width: 500px;font-size: large;background-color: black;">
                     <div class="card-body">
                         <h1 style="color:yellow;">Aukioloajat</h1>
@@ -158,9 +162,11 @@
                 </div>
               </div><br>
 
-
-
-    </div>     
+     </div>
+    </div>
+  </div>
+   </div>     
+  
     
     <!--Footer-->
     <div class="container-fluid" style="background-color:black;">
