--- a/Varaa-aika/Varaapalvelu.html
+++ b/Varaa-aika/Varaapalvelu.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" media="screen" href="css.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <title>Varaa palvelu</title>
 </head>
 <body>
+  
    <header style="background-color: gray;" width="100%" height="10px"></header>
     <div class="container-fluid">
 
@@ -32,7 +33,7 @@
                     </div>  
                   </nav>
             </div>
-   
+            <br>
         </div>   
         <div class="container-md">
           <center>
@@ -118,13 +119,20 @@
             </div>
             <br>
           <!--Footer-->
-           <div class="container-fluid" style="background-color:black;">
-                <center>
-                <h3 style="color:yellow;">Autokorjaamo.</h3><br>
-                 <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="#">Link</a> <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa aika</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a><br>
-                </center>
-           </div>
-
+          <div class="container-fluid" style="background-color:black;">
+            <center>
+              <h3 style="color:yellow;">Autokorjaamo.</h3><br>
+              <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="#">Link</a> <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa aika</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a><br>
+            <br>
+            <h3 style="color: yellow;">Yhteystiedot</h3>
+            <addres style="color: grey;">
+              autokorjaamo@autokorjaamo.com<br>
+              045 123 4567<br>
+              Vankanlähde 9, 13100 Hämeenlinna<br><br><br>
+            </addres>
+            </center>
+            </div>
+          
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-</body>
+  </body>
 </html>
