--- a/Varaa-aika/Varaapalvelu.html
+++ b/Varaa-aika/Varaapalvelu.html
@@ -118,7 +118,9 @@
             <div class="d-grid gap-2">
               <button class="btn btn-primary" type="button" style="background-color: yellow; color: #000; font-weight: bolder;">Varaa Huoltoaika</button>
             </div>
+        </div>
             <br>
+            <form>
           <!--Footer-->
           <div class="container-fluid" style="background-color:black;">
             <center>
@@ -133,6 +135,7 @@
             </addres>
             </center>
             </div>
+          </form>
           
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
   </body>
