--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         padding-top:15px;
         padding-bottom:15px;
     }
+    body{
+      background-color: grey;
+    }
 
 
         </style>
@@ -51,7 +54,7 @@
 
     <div class="container-fluid">
         <!--Navbar-->
-        <div class="row" style="margin-bottom: 5px;">
+        <div class="row" style="margin-bottom: 0px;">
                 <nav class="navbar navbar-expand-sm  navbar-dark" style="background-color:black;">
                     <a class="navbar-brand" href="https://anttiannala.github.io/Project/" style="color:yellow">Etusivu</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -73,7 +76,7 @@
                   </nav>
             </div>
 
-<div class="container-fluid" style="background-color:grey;padding:0;" >    
+<div class="container-fluid" style="background-color:grey;" >    
   <div class="container" style="background-color:white;">
         <div class="container" >
             <!--Carousel-->
