--- a/Varaa-aika/Varaapalvelu.html
+++ b/Varaa-aika/Varaapalvelu.html
@@ -37,7 +37,7 @@
         </div>   
         <div class="container-md">
           <center>
-           <h2><strong>Minkä laista huoltoa tarvitset?</strong></h2>
+           <h2><strong>Minkälaista huoltoa tarvitset?</strong></h2>
             <form>
                <input type="checkbox" id="määräaikaishuolto" name="Määräaikaishuolto" value="Määräaikaishuolto">
                <label for="Määräaikaishuolto">Määräaikaishuolto</label>
@@ -73,7 +73,7 @@
             <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Valitse merkki">
             <datalist id="datalistOptions">
              <option value="BMW">
-             <option value="Volgswagen">
+             <option value="Volkswagen">
              <option value="Volvo">
              <option value="Ford">
              <option value="Mercedes-benz">
@@ -82,9 +82,9 @@
              <option value="Lexus">
              <option value="Dodge">
              <option value="Opel">
-             <option value="Madza">
-             <option value="Tyota">
-             <option value="Porche">
+             <option value="Mazda">
+             <option value="Toyota">
+             <option value="Porsche">
             </datalist> 
             <div class="form-floating">
               <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
@@ -95,8 +95,8 @@
               <label for="floatingTextarea">Auton rekisteritunnus</label>
             </div>
             <br>
-            <h5><strong>Paljonko autolla on ajettu?</strong></h5>
-            <input type="text" id="Ajomäärä" name="Ajomäärä" value="Paljonko autola on ajettu" style="width: 250px;height: 25px; font-weight: lighter; font-style: italic;">
+            <h5><strong>Paljonko on autolla ajettu</strong></h5>
+            <input type="text" id="Ajomäärä" name="Ajomäärä" value="Paljonko autolla on ajettu" style="width: 250px;height: 25px; font-weight: lighter; font-style: italic;">
             <br>
             <h5>Kirjoita Tiedot</h5>
             <div class="form-floating">
