--- a/Varaa-aika/Varaapalvelu.html
+++ b/Varaa-aika/Varaapalvelu.html
@@ -10,6 +10,7 @@
 <body>
 
    <header style="background-color: gray;" width="100%" height="10px"></header>
+   <!--navigation-->
     <div class="container-fluid">
 
         <div class="row" style="margin-bottom: 5px;">
@@ -34,6 +35,10 @@
                   </nav>
             </div>
             <br>
+            <div class="container-fluid" style="background-color:grey;" >    
+              <div class="container" style="background-color:white;">
+              </div>
+            </div>
         </div>   
         <div class="container-md">
           <center>
