--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
         padding-bottom:15px;
     }
     body{
-      background-color: grey;
+      background-color: #bbb;
     }
-
-
         </style>
     </head>
 <body>
@@ -76,8 +74,8 @@
                   </nav>
             </div>
 
-<div class="container-fluid" style="background-color:grey;" >    
-  <div class="container" style="background-color:white;">
+<div class="container-fluid" style="background-color:#bbb;" >    
+  <div class="container" style="background-color:#bbb;">
         <div class="container" >
             <!--Carousel-->
 
@@ -116,7 +114,7 @@
               </div>
          </div><br>
             <!--Aukioloajat-->
-              <div class="container" style="background-color: white;">
+              <div class="container" style="background-color: #bbb;">
                 <div class="card" style="width: 500px;font-size: large;background-color: black;">
                     <div class="card-body">
                         <h1 style="color:yellow;">Aukioloajat</h1>
@@ -133,15 +131,15 @@
               <div class="container">
                 <h1>Uutisia</h1>
                 <div class="row">
-                  <div class="col-sm-4" style="background-color:#aaa;">
+                  <div class="col-sm-4" style="background-color:#ccc;">
                     <h3>Mercedes esitteli ensimmäisen pienen sähköautonsa - hinta jää alle 50 000 euron?</h3>
                     <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
                   </div>
-                  <div class="col-sm-4" style="background-color:#ccc;">
+                  <div class="col-sm-4" style="background-color:#aaa;">
                     <h3>Tällaisen auton suomalainen haluaa: Hinta alle 20000 euroa - Mersu ja Volvo suosituimmat!</h3>
                     <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
                   </div>
-                  <div class="col-sm-4" style="background-color:#aaa;">
+                  <div class="col-sm-4" style="background-color:#ccc;">
                     <h3>Tältä näyttää täysin uusi Lada Niva: Ensimmäinen kuva paljastaa hurjan muutoksen</h3>
                     <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
                   </div>
@@ -150,20 +148,20 @@
 
               <div class="container">
                 <div class="row">
-                  <div class="col-sm-4" style="background-color:#ccc;">
+                  <div class="col-sm-4" style="background-color:#aaa;">
                     <h3>Jopa karjan lannasta polttoainetta – Öljyn korvaajaksi ehdolla myös kasvatettu levä</h3>
                     <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
                   </div>
-                  <div class="col-sm-4" style="background-color:#aaa;">
+                  <div class="col-sm-4" style="background-color:#ccc;">
                     <h3>Punainen vai musta ensin? Näin kytket käynnistyskaapelit oikein</h3>
                     <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
                   </div>
-                  <div class="col-sm-4" style="background-color:#ccc;">
+                  <div class="col-sm-4" style="background-color:#aaa;">
                     <h3>Romutuspalkkion porsaanreikä tukitaan – palkkio vain yhdestä autosta</h3>
                     <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
                   </div>
                 </div>
-              </div><br>
+              </div>
 
      </div>
     </div>
