--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -59,6 +59,8 @@
     Huollamme ja korjaamme useita <abbr title="BMW, Volkswagen, Volvo, Ford, Mercedes-Benz, Subaru, Seat, Lexus, Dodge, Opel, Mazda, Toyota, Porsche">automerkkejä</abbr> ja malleja auton iästä riippumatta.</p>
   <p>Meidän matkamme on vasta aluillaan ja tarkoituksenamme on laajentaa uusille paikkakunnille. 
     Tavoitteenamme tarjota yhä useammalle helpompaa AutoElämää.</p>
+  <h2>Autokorjaamo. sijainti</h2> 
+  <div class="mapouter"><div class="gmap_canvas"><iframe width="620" height="476" id="gmap_canvas" src="https://maps.google.com/maps?q=vankanl%C3%A4hde%209&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://putlocker-is.org"></a><br><style>.mapouter{position:relative;text-align:right;height:476px;width:620px;}</style><a href="https://www.embedgooglemap.net">google maps html generator</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:476px;width:620px;}</style></div></div>
     </div>
   
    
