--- a/index.html
+++ b/index.html
@@ -22,14 +22,15 @@
     }
     .text-block1 {
         position:absolute;
-        bottom: 20px;
-        right: 450px;
+        bottom: 30px;
+        right: 250px;
         background-color: black;
         color: white;
         padding-left: 40px;
-        padding-right: 40px;
+        padding-right: 80px;
         padding-top:15px;
         padding-bottom:15px;
+        border-radius: 5px;
     }
     .text-block2 {
         position:absolute;
@@ -41,6 +42,19 @@
         padding-right: 80px;
         padding-top:15px;
         padding-bottom:15px;
+        border-radius: 5px;
+    }
+    .text-block3 {
+        position:absolute;
+        bottom: 40px;
+        right: 650px;
+        background-color: black;
+        color: white;
+        padding-left: 40px;
+        padding-right: 80px;
+        padding-top:15px;
+        padding-bottom:15px;
+        border-radius: 5px;
     }
     body{
       background-color: #bbb;
@@ -83,10 +97,10 @@
                 <div class="carousel-inner">
 
                   <div class="carousel-item active">
-                    <img src="images/teetarjous.jpg" style="height: 400px;" class="rounded mx-auto d-block" alt="https://commons.wikimedia.org/wiki/File:Motrio_mechanic_in_its_workshop.jpg">
+                    <img src="images/teetarjous.jpg" style="height: 400px;" class="d-block w-100" alt="https://commons.wikimedia.org/wiki/File:Motrio_mechanic_in_its_workshop.jpg">
                       <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html"><div class="text-block1">
-                        <h4 style="color:yellow;">Varaa aika</h4>
-                        <p>Varaa sinulle sopiva aika klikkaamalla tästä</p>
+                        <h3 style="color:yellow;">Varaa aika</h3>
+                        <p>Varaa sinulle sopiva aika klikkaamalla tästä!</p>
                       </div></a>
                   </div>
 
@@ -94,12 +108,16 @@
                     <img src="images/car.jpg" style="width: 300px; height: 400px;" class="d-block w-100" alt="https://pixabay.com/fi/photos/auto-mekaanikko-mekaanikko-ty%C3%B6paja-2834414/">
                     <a href="https://anttiannala.github.io/Project/TietoaMeista.html"><div class="text-block2">
                       <h3 style="color:yellow;">Autokorjaamo.</h3>
-                      <p>Lue lisää yrityksestämme tältä sivulta</p>
+                      <p>Lue lisää yrityksestämme tältä sivulta.</p>
                     </div></a>
                   </div>
 
                   <div class="carousel-item">
                     <img src="images/rengas.jpg" style="width: 300px; height: 400px;" class="d-block w-100" alt="https://pixy.org/5881422/">
+                    <a href="https://anttiannala.github.io/Project/TietoaMeista.html"><div class="text-block3">
+                      <h3 style="color:yellow;">Hinnasto</h3>
+                      <p>Tarkista palveluidemme hinnat klikkaamalla tästä!</p>
+                    </div>
                   </div>
 
                 </div>
