--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -6,7 +6,7 @@
     <title>Tietoa-meistä/esittely</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="css/aboutus.css">
-    <style> iframe {width:100%;height:100%;max-width: 620px;}</style>
+    <style> iframe {width:100%;height:100%;max-width: 820px;}</style>
 </head>
 <body>
   
@@ -64,7 +64,9 @@
     <iframe width="620" height="476" id="gmap_canvas" src="https://maps.google.com/maps?q=vankanl%C3%A4hde%209&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
     <a href="https://putlocker-is.org"></a><br><style>.mapouter{position:relative;text-align:left;height:476px;width:auto;}</style>
     <a href="https://www.embedgooglemap.net">google maps html generator</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:476px;width:auto;}</style>
-  </div></div>
+    </div></div>
+    <p>Liikkeemme sijaitsee hämeen ammattikorkeakoulun tiloissa, aukioloajat näet etusivulta</p>
+    <h3>Tervetuloa!</h3>
     </div>
   
    
