--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -65,7 +65,7 @@
     <a href="https://putlocker-is.org"></a><br><style>.mapouter{position:relative;text-align:left;height:476px;width:auto;}</style>
     <a href="https://www.embedgooglemap.net">google maps html generator</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:476px;width:auto;}</style>
     </div></div>
-    <p>Liikkeemme sijaitsee hämeen ammattikorkeakoulun tiloissa, aukioloajat näet etusivulta</p>
+    <p>Liikkeemme sijaitsee Hämeen ammattikorkeakoulun tiloissa, aukioloajat näet etusivulta</p>
     <h3>Tervetuloa!</h3>
     </div>
   
