--- a/index.html
+++ b/index.html
@@ -7,14 +7,11 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
         <link href="/css/css.css" rel="stylesheet" type="text/css" media="screen">
         <style>
-    a:link{
-        color:gray;
+    a{
+        color:grey;
     }
     a:hover{
         color:yellow;
-    }
-    a:visited{
-        color:orange
     }
     th {
         color:yellow;
@@ -59,6 +56,9 @@
     body{
       background-color: #bbb;
     }
+    div.container a{
+    color:black;
+    }
         </style>
     </head>
 <body>
@@ -75,10 +75,10 @@
                     <div class="collapse navbar-collapse" id="collapsibleNavbar">
                       <ul class="navbar-nav">
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Link</a>
+                          <a class="nav-link" href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa aika</a>
+                          <a class="nav-link" href="https://anttiannala.github.io/Project/Varaapalvelu.html">Varaa aika</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
@@ -93,7 +93,7 @@
         <div class="container" >
             <!--Carousel-->
 
-            <div style="  background-image: linear-gradient(black, grey);" id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+            <div style="background-image: linear-gradient(black, grey);" id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
 
                   <div class="carousel-item active">
@@ -147,19 +147,19 @@
 
               <!--Columns-->
               <div class="container">
-                <h1>Uutisia</h1>
+                <h1 style="color:black;">Uutisia</h1>
                 <div class="row">
                   <div class="col-sm-4" style="background-color:#ccc;">
-                    <h3>Mercedes esitteli ensimmäisen pienen sähköautonsa - hinta jää alle 50 000 euron?</h3>
-                    <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
+                    <a href="https://www.iltalehti.fi/autouutiset/a/920ff5ed-a070-483b-8ade-6eb9557aa964"><h3>Mercedes esitteli ensimmäisen pienen sähköautonsa - hinta jää alle 50 000 euron?</h3></a>
+                    <img src="images/mercedes.jpg" width="50%" height="50%" alt="https://pixabay.com/fi/photos/mercedes-190-sl-oldtimer-klassinen-3690957/">
                   </div>
                   <div class="col-sm-4" style="background-color:#aaa;">
-                    <h3>Tällaisen auton suomalainen haluaa: Hinta alle 20000 euroa - Mersu ja Volvo suosituimmat!</h3>
+                    <a href="#"><h3>Tällaisen auton suomalainen haluaa: Hinta alle 20000 euroa - Mersu ja Volvo suosituimmat!</h3></a>
                     <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
                   </div>
                   <div class="col-sm-4" style="background-color:#ccc;">
-                    <h3>Tältä näyttää täysin uusi Lada Niva: Ensimmäinen kuva paljastaa hurjan muutoksen</h3>
-                    <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
+                    <a href="#"><h3>Tältä näyttää täysin uusi Lada Niva: Ensimmäinen kuva paljastaa hurjan muutoksen</h3></a>
+                    <img src="images/lada.jpg" width="50%" height="50%" alt="https://pixabay.com/fi/photos/auto-jeeppi-ajoneuvon-seikkailu-4260033/">
                   </div>
                   </div>
               </div>
@@ -167,16 +167,16 @@
               <div class="container">
                 <div class="row">
                   <div class="col-sm-4" style="background-color:#aaa;">
-                    <h3>Jopa karjan lannasta polttoainetta – Öljyn korvaajaksi ehdolla myös kasvatettu levä</h3>
-                    <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
+                    <a href="#"><h3>Jopa karjan lannasta polttoainetta – Öljyn korvaajaksi ehdolla myös levä</h3></a>
+                    <img src="images/karja.jpg" width="50%" height="50%" alt="https://pixabay.com/fi/photos/lehm%C3%A4-lehm%C3%A4t-karja-niitty-el%C3%A4inten-4354411/">
                   </div>
                   <div class="col-sm-4" style="background-color:#ccc;">
-                    <h3>Punainen vai musta ensin? Näin kytket käynnistyskaapelit oikein</h3>
-                    <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
+                    <a href="#"><h3>Punainen vai musta ensin? Näin kytket käynnistyskaapelit oikein akkuun</h3></a>
+                    <img src="images/akku.png" width="50%" height="50%" alt="https://pixabay.com/fi/vectors/auton-akku-akku-johtaa-akulla-296788/">
                   </div>
                   <div class="col-sm-4" style="background-color:#aaa;">
-                    <h3>Romutuspalkkion porsaanreikä tukitaan – palkkio vain yhdestä autosta</h3>
-                    <img src="images/auto.jpg" width="50%" height="50%" alt="https://commons.wikimedia.org/wiki/File:Puli_(Car)_Pinguin_4.jpg">
+                    <a href="#"><h3>Romutuspalkkion porsaanreikä tukitaan – palkkio vain yhdestä autosta</h3></a>
+                    <img src="images/romu.jpg" width="50%" height="50%" alt="https://pixabay.com/fi/photos/auton-romu-sammal-vanha-mets%C3%A4-571448/">
                   </div>
                 </div>
               </div>
