--- a/Hinnasto.html
+++ b/Hinnasto.html
@@ -31,10 +31,10 @@
                     <div class="collapse navbar-collapse" id="collapsibleNavbar">
                       <ul class="navbar-nav">
                         <li class="nav-item">
-                          <a class="nav-link" href="#">Link</a>
+                          <a class="nav-link" href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a>
                         </li>
                         <li class="nav-item">
-                          <a class="nav-link" href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa aika</a>
+                          <a class="nav-link" href="https://anttiannala.github.io/Project/Varaapalvelu.html">Varaa aika</a>
                         </li>
                         <li class="nav-item">
                           <a class="nav-link" href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
@@ -73,6 +73,21 @@
                     <td>OBD luku ja tyhjennys</td>
                     <td>Luemme auton vikakoodit ja annamme siitä raportin asiakkaalle. Tämän jälkeen asiakkaan halutessa tyhjennämme vikamuistin.</td>
                     <td>35€</td>
+                  </tr>
+                  <th scope="row">4</th>
+                    <td>Ohjauskulmien tarkistus ja saatö</td>
+                    <td>Ohjauskulmien tarkistus ja säätö pitää sisällään perussäädön. Lisätyön veloitamme erikseen, jos pultit on esimerkiksi jumitttautunut ja ne täytyy työstää auki.</td>
+                    <td>60€</td>
+                  </tr>
+                  <th scope="row">5</th>
+                    <td>Renkaiden vaihto</td>
+                    <td>Vaihdamme henkilöauton tai pakettiauton renkaat</td>
+                    <td>35€</td>
+                  </tr>
+                  <th scope="row">6</th>
+                    <td>Vannetyö + tasapainoitus + allelaitto</td>
+                    <td>-</td>
+                    <td>80€</td>
                   </tr>
                 </tbody>
               </table>
