--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -54,7 +54,7 @@
     Valikoimasta löytyy varaosat ja tarvikkeet lukuisiin eri automalleihin.</p>
   <h2>Autokorjaamo. autohuolto</h2>
   <p>Huollot ja korjaukset suorittaa aina ammattitaitoinen mekaanikko ja myönnämme varaosille vähintään kolmen vuoden takuun. 
-    Huollamme ja korjaamme useita <abbr title="BMW, Volkswagen, Volvo, Ford, Mercedes-Benz, Subaru, Seat, Lexus, Dodge, Opel, Mazda, Toyota, Porsche">automerkkejä</abbr> ja malleja auton iästä riippumatta.</p>
+    Huollamme ja korjaamme useita <abbr title="BMW, Volkswagen, Volvo, Ford, Mercedes-Benz, Subaru, Seat, Lexus, Dodge, Opel, Mazda, Toyota, Porsche" tabindex="0">automerkkejä</abbr> ja malleja auton iästä riippumatta.</p>
   <p>Meidän matkamme on vasta aluillaan ja tarkoituksenamme on laajentaa uusille paikkakunnille. 
     Tavoitteenamme tarjota yhä useammalle helpompaa AutoElämää.</p>
   <h2>Autokorjaamo. sijainti</h2> 
