--- a/Varaapalvelu.html
+++ b/Varaapalvelu.html
@@ -99,7 +99,7 @@
             </div>
             <br>
             <h5><strong>Auton mittarilukema</strong></h5>
-            <input type="text" id="Ajomäärä" name="Ajomäärä" value="Paljonko autolla on ajettu" style="width: 250px;height: 25px; font-weight: lighter; font-style: italic;">
+            <input type="text" id="Ajomäärä" name="Ajomäärä" value="Mittarilukema" style="width: 250px;height: 25px; font-weight: lighter; font-style: italic;">
             <br>
             <h5>Kirjoita Tiedot</h5>
             <div class="form-floating">
