--- a/Hinnasto.html
+++ b/Hinnasto.html
@@ -105,7 +105,7 @@ a:visited{
             <div class="container-fluid" style="background-color:black;">
                 <center>
                   <h3 style="color:yellow;">Autokorjaamo.</h3><br>
-                  <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="Hinnasto.html">Hinnasto</a> <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa aika</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a><br>
+                  <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="Hinnasto.html">Hinnasto</a> <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa palvelu</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a><br>
                 <br>
                 <h3 style="color: yellow;">Yhteystiedot</h3>
                 <addres style="color: grey;">
