--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                       <a class="nav-link" href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="https://anttiannala.github.io/Project/Varaapalvelu.html">Varaa aika</a>
+                      <a class="nav-link" href="https://anttiannala.github.io/Project/Varaapalvelu.html">Varaa palvelu</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a>
