--- a/Varaapalvelu.html
+++ b/Varaapalvelu.html
@@ -10,13 +10,11 @@
     <meta name="author" content="Antti Annala, Eetu Lehmusvuori, Mikael Fabritius">
 </head>
 <body>
-
-   <header style="background-color: gray;"" width="100%" height="10px"></header>
    
-   <div class="container-fluid">
+   
 
-    <!--NAvbar 2-->
-    <div class="row" style="margin-bottom: 0px;">
+    <!--Navbar 2-->
+    <div  class="row" style="margin-bottom: 0px;">
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:black;">
       <div class="container-fluid">
         <a class="navbar-brand" href="https://anttiannala.github.io/Project/" style="color:yellow">Etusivu</a>
