--- a/Varaapalvelu.html
+++ b/Varaapalvelu.html
@@ -58,7 +58,7 @@
                <label for="Muu korjaus,tarkenna">Muu korjaus, tarkenna</label><br>
                <br>
                <div class="form-floating">
-                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+                <textarea class="form-control" placeholder="Ongelman tarkennus" id="Tarkennus"></textarea>
                 <label for="floatingTextarea">Auton ongelman Tarkennus</label>
               </div>
               <br>
@@ -73,7 +73,7 @@
           </center>
           <h5><strong>Auton tiedot</strong></h5>
           <label for="exampleDataList" class="form-label">Auton tiedot</label>
-            <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Valitse merkki">
+            <input class="form-control" list="datalistOptions" id="automerkkejä" placeholder="Valitse merkki">
             <datalist id="datalistOptions">
              <option value="BMW">
              <option value="Volkswagen">
@@ -90,11 +90,11 @@
              <option value="Porsche">
             </datalist> 
             <div class="form-floating">
-              <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+              <textarea class="form-control" placeholder="Auton Malli" id="Auton malli"></textarea>
               <label for="floatingTextarea">Auton malli</label>
             </div>
             <div class="form-floating">
-              <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+              <textarea class="form-control" placeholder="Auton rekisteritunnus" id="Rekisteritunnus"></textarea>
               <label for="floatingTextarea">Auton rekisteritunnus</label>
             </div>
             <br>
@@ -103,19 +103,19 @@
             <br>
             <h5>Kirjoita Tiedot</h5>
             <div class="form-floating">
-              <input type="email" class="form-control" id="floatingInputValue" placeholder="name@example.com" value="test@example.com">
+              <input type="email" class="form-control" id="sähköposti" placeholder="name@example.com" value="test@example.com">
              <label for="floatingInputValue">Kirjoita sähköposti osoitteesi</label>
             </div>
               <br>
 
               <div class="form-floating">
-                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+                <textarea class="form-control" placeholder="Etu-ja sukunimi" id="Etujasukunimi"></textarea>
                 <label for="floatingTextarea"> Kirjoita Etu- ja sukunimesi</label>
               </div>
               <br>
 
               <div class="form-floating">
-                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
+                <textarea class="form-control" placeholder="Puhelinnumero" id="Puhelinnumero"></textarea>
                 <label for="floatingTextarea">Puhelinnumero</label>
               </div>
 
@@ -129,7 +129,7 @@
           <div class="container-fluid" style="background-color:black;">
             <center>
               <h3 style="color:yellow;">Autokorjaamo.</h3><br>
-              <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="#">Link</a> <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa aika</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a><br>
+              <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a> <a href="https://anttiannala.github.io/Project/Varaa-aika/Varaapalvelu.html">Varaa aika</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a><br>
             <br>
             <h3 style="color: yellow;">Yhteystiedot</h3>
             <addres style="color: grey;">
