--- a/TietoaMeista.html
+++ b/TietoaMeista.html
@@ -81,7 +81,7 @@
         <a href="https://anttiannala.github.io/Project/index.html">Etusivu</a> <a href="https://anttiannala.github.io/Project/Hinnasto.html">Hinnasto</a> <a href="https://anttiannala.github.io/Project/Varaapalvelu.html">Varaa palvelu</a> <a href="https://anttiannala.github.io/Project/TietoaMeista.html">Tietoa meistä</a><br>
       <br>
       <h3 style="color: yellow;">Yhteystiedot</h3>
-      <addres >
+      <addres style="color: gray;">
         autokorjaamo@autokorjaamo.com<br>
         045 123 4567<br>
         Vankanlähde 9, 13100 Hämeenlinna<br><br><br>
